force-app/main/default/objects/SolarBot_Status__c/SolarBot_Status__c.object-meta.xml
<CustomObject>
    <label>SolarBot Status</label>
    <nameField>
        <displayFormat>SB Status-{0000}</displayFormat>
        <label>SolarBot Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SolarBot Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>