force-app/main/default/objects/SolarBot_Status__c/fields/Kilowatt_Hours__c.field-meta.xml
<CustomField>
    <fullName>Kilowatt_Hours__c</fullName>
    <label>Kilowatt Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>