force-app/main/default/objects/SolarBot_Status__c/fields/Panel_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Panel_Temperature__c</fullName>
    <label>Panel Temperature</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>