force-app/main/default/objects/SolarBot_Status__c/fields/Percent_Obscured__c.field-meta.xml
<CustomField>
    <fullName>Percent_Obscured__c</fullName>
    <label>Percent Obscured</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>