force-app/main/default/objects/SolarBot_Status__c/fields/SolarBot__c.field-meta.xml
<CustomField>
    <fullName>SolarBot__c</fullName>
    <label>SolarBot</label>
    <referenceTo>SolarBot__c</referenceTo>
    <relationshipLabel>SolarBot Status</relationshipLabel>
    <relationshipName>SolarBot_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>